# libtui

./: CMakeLists.txt  config.h.in  libtui.pc.in
example/: animate.c  boxlayout.c  hello.c
include/: tui.h
include/tui/: boxlayout.h  definitions.h  label.h  mainlayout.h  separator.h  statusbar.h  titlebar.h  utils.h  widget.h
src/: boxlayout.c  label.c  mainlayout.c  separator.c  statusbar.c  titlebar.c  tui.c  utils.c  utils_internal.h  widget.c
